syntax = "proto3";

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/user/v1;user_v1";

package stocklet.user.v1;

message User {
    string id = 1;

    string first_name = 2;
    string last_name = 3;

    string email = 4;

    string address_line_1 = 5;
    string address_line_2 = 6;
    string address_town = 7;
    string address_postcode = 8;
}